--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,3 +9,6 @@
 @import 'scss/layout/navbar';
 @import 'scss/layout/banner-main';
 @import 'scss/layout/services';
+@import 'scss/layout/video';
+@import 'scss/layout/portfolio';
+@import 'scss/layout/about';
