--- a/src/css/scss/layout/navbar.scss
+++ b/src/css/scss/layout/navbar.scss
@@ -1,6 +1,11 @@
 #egg-nav{
-	background-color: rgba($color-dark, 1);
-	position: absolute;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.79+0,0.33+63,0+99 */
+	background: -moz-linear-gradient(top,  rgba(0,0,0,0.79) 0%, rgba(0,0,0,0.33) 63%, rgba(0,0,0,0) 99%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(0,0,0,0.79) 0%,rgba(0,0,0,0.33) 63%,rgba(0,0,0,0) 99%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(0,0,0,0.79) 0%,rgba(0,0,0,0.33) 63%,rgba(0,0,0,0) 99%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+	position: fixed;
 	left: 0;
 	top: 0;
 	z-index: 99;
