--- a/src/css/scss/layout/services.scss
+++ b/src/css/scss/layout/services.scss
@@ -29,16 +29,16 @@
 			float: left;
 			margin-top: 30px;
 			
-			ul{
+			> ul{
 				width: 100%;
 				float: left;
 
-				li{
+				> li{
 					position: relative;
 					float: left;
-					margin-right: 56px;
+					margin-right: 65px;
 					
-					a{
+					> a{
 						display: block;
 						overflow: hidden;
 						text-indent: -999em;	
@@ -52,6 +52,7 @@
 						position: absolute;
 						left: 0;
 						top: 135px;
+						z-index: 2;
 						visibility: hidden;
 						opacity: 0;
 						@include animation(.2s, ease);
@@ -85,18 +86,32 @@
 									float: left;
 
 									.egg-describle{
+										width: 100%;
+										float: left;
+										padding-left: 30px;
 										h3{
 											font-family: $fontHighlight;
 											font-weight: 700;
 											font-size: 30px;
 											text-align: left;
 											display: block;
-											margin-bottom: 25px;
+											margin-bottom: 10px;
 										}
-										p{
-											text-align: left;
-											display: block;
-											font-size: 14px;
+										ul{
+											width: 100%;
+											float: left;
+											list-style: initial;
+											
+											li{
+												text-align: left;
+												display: block;
+												margin-bottom: 5px;
+												font-size: 14px;
+												list-style: initial;
+												span{
+													display: none;
+												}
+											}
 										}
 									}
 								}
